--- a/main.html
+++ b/main.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Styled Paragraphs</title>
+  <style>
+    /* Style for the paragraph with id 'yellow' */
+    #yellow {
+      background-color: yellow;
+      border-width: 1px;
+      border-color: green;
+      border-style: solid;
+    }
 
+    /* Style for the paragraph with id 'red' */
+    #red {
+      background-color: red;
+      border-width: 1px;
+      border-color: black;
+      border-style: solid;
+    }
+
+    /* Style for the paragraph with id 'green' */
+    #green {
+      background-color: green;
+      border-width: 1px;
+      border-color: yellow;
+      border-style: solid;
+    }
+  </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <p id="yellow">Paragraph 1</p>
+  <p id="red">Paragraph 2</p>
+  <p id="green">Paragraph 3</p>
 
 </body>
-
 </html>
